# crypto-data-platform

./: .env.example  .gitignore  CORRECTNESS_INVARIANTS.md  Dockerfile  LOGGING_GUIDE.md  PUBLIC_README.md  README.md  claude_readme.md  deploy.sh  pyproject.toml  requirements-dev.txt  requirements.txt  test_incremental_local.py
.claude/: CLAUDE.md
diagrams/: README.html  README.md
docs/: COMPONENT_DETAILS.md  PERFORMANCE.md
schemahub/: checkpoint.py  cli.py  config.py  health.py  manifest.py  metrics.py  parallel.py  progress.py  rate_limiter.py  raw_writer.py  transform.py  validation.py
schemahub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
schemahub/connectors/: base.py  (+1 more)
sql/: 01_data_overview.sql  02_data_freshness.sql  03_gap_detection.sql  04_duplicate_detection.sql  05_trade_id_gaps.sql  06_data_quality_dashboard.sql  07_monitoring_aggregations.sql
terraform/: .gitignore  README.md  athena delete-work-group --work-group schemahub --recursive-delete-option  athena.tf  billing_alerts.tf  cloudwatch.tf  data_quality_dashboard.tf  data_quality_lambda.tf  dynamodb.tf  ecr.tf  ecs.tf  eventbridge.tf  iam.tf  outputs.tf  s3.tf  terraform.tfvars.example  tfplan  variables.tf  versions.tf
tests/: test_checkpoint.py  test_coinbase_connector.py  test_coinbase_connector_unit.py  test_health.py  test_incremental_moto.py  test_integration_parallel.py  test_manifest.py  test_parallel.py  test_pipeline_invariants.py  test_rate_limiter.py  test_raw_writer.py  test_raw_writer_unit.py  test_seeds.py  test_transform_integration.py  test_validation.py
(+5 files in other folders)
